src/styles/components/header/_hero.scss
/* Header */
.hero {
  background: url('../images/KTLO.jpg') no-repeat center center/cover;
  height: 100vh;
  position: relative;
  color: $color-light;

  .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    padding: $padding-div;

    h1 {
      text-align: center;
    }

    p {
      font-size: $font-XL;
      margin: 20px 0;
      text-align: center;
    }
  }

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
  }

  * {
    z-index: 10;
  }
}

